# PoC-Trust-Minimzed-Cross-Chain-Bridge

./: LICENSE  README.md
Smart_Contract_component/: .env.template  README.md  hardhat.config.js  package-lock.json  package.json
Smart_Contract_component/contracts/: SP1VerifierGroth16.sol  ZKBTC.sol
Smart_Contract_component/scripts/: check_balance_token.js  check_vkeys.js  deploy_token_contract.js  deploy_verifier.js  initiate_burn.js  interaction_test_with_verifier.js  query_burn_request.js  reclaim_burn.js  staker_claim_reward.js  submit_proof_to_token_burn.js  submit_proof_to_token_mint.js  submit_proof_to_verifier.js
TSS_component/rustlib/: Cargo.toml
TSS_component/rustlib/src/: bitcoin_related.rs  lib.rs
Thesis/latex_source_code/: .gitignore  DESSThesis.cls  references.bib  template.bcf  template.tex
ZKP_component/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
ZKP_component/contracts/: .gitignore  README.md  foundry.toml
ZKP_component/contracts/src/: ZKBTC.sol
ZKP_component/contracts/test/: ZKBTC.t.sol
ZKP_component/lib/: Cargo.toml
ZKP_component/lib/src/: lib.rs
ZKP_component/program/: Cargo.toml
ZKP_component/program/src/: burn.rs  mint.rs
ZKP_component/script/: Cargo.toml
