[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_tss"        # The name of your Python module
crate-type = ["cdylib"]  # Build as a dynamic library for Python

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
once_cell = "1"
tower-http = { version = "0.5", features = ["trace"] }
zeroize = "1"
sled = "0.34"
tokio = { version = "1.38", features = ["full"] }
# Taproot‑compatible FROST implementation over secp256k1
frost-secp256k1-tr= "2.1.0"
bincode = "2.0.1"
thiserror = "1.0"
bitcoin = "0.32.5"
[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]