[package]
name = "bitcoin_verify_program"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
sp1-zkvm = "4.2.1"
serde = { version = "1.0.204", features = ["derive"] }
lib_struct= { path = "../lib" }     
hex="0.4"
bitcoin = "0.32.5"

[[bin]]
name = "mint_circuit"
path = "src/mint.rs"

[[bin]]
name = "burn_circuit"
path = "src/burn.rs"